--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,14 @@
       </div>
     </form>
 
-    <div class="gallery">
-      <p></p>
+    <div class="container">
+      <div class="gallery">
+        <p></p>
+      </div>
+
+      <button type="button" class="load-more is-hidden">Load more</button>
     </div>
 
-    <script src="./index.js" type="module"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
